@@ -22,6 +22,7 @@ Nov, 16
 + Added Friday Night Funkin
 + Added Vex 7
 ^ Fixed Bad Ice Cream 1, 2, and 3
+^ Added more reviews
 ------------------------------------------------------------
 Nov, 14
 ^ Added more reviews
